# privacy-guardian

./: Dockerfile  README (2).md  README.md  inference.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  environment.py  models.py  requirements.txt
server/tasks/: __init__.py  easy.py  hard.py  medium.py
static/: index.html
tasks/: easy.py  hard.py  medium.py
